@@ -96,14 +96,17 @@ sub regulators {
 sub toll_free {
     note("NANP tollfree numbers");
     my %test_numbers = (
-        '866 623 2282' => 1,
-        '888 225 5322' => 1,
-        '202 418 0500' => 0,
-        '888 888 8888' => 1,
         '800 800 8000' => 1,
+        '833 789 0000' => 1,
+        '844 789 0000' => 1,
+        '855 789 0000' => 1,
+        '866 623 2282' => 1,
+        '877 789 0000' => 1,
+        '888 225 5322' => 1,
+
         '808 808 1111' => 0,
         '845 321 4567' => 0,
-        '833 789 0000' => 1
+        '202 418 0500' => 0,
     );
 
     foreach my $test_number (sort keys %test_numbers) {
